탈퇴까지 완료

--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -23,6 +23,15 @@
     <link rel="stylesheet" href="/css/board.css">
 
     <style>
+        .mypage{
+            font-weight: 800;
+
+        }
+
+        .mypage>img{
+            border : 2px solid gray;
+        }
+
         main>.update{
             margin-top : 50px;
             margin-left : 16%;
@@ -135,14 +144,6 @@
 
     </div>
 </header>
-
-<div class="up">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-square-fill" viewBox="0 0 16 16">
-        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm4 9h8a.5.5 0 0 0 .374-.832l-4-4.5a.5.5 0 0 0-.748 0l-4 4.5A.5.5 0 0 0 4 11z"/>
-    </svg>
-</div>
-
-
 
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
