--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -198,11 +198,11 @@
 
                 <form action="/post" method="post" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label>작성자 </label>
-                        <span th:text="${dto.nickname}"></span><br/>
+                        <label for="nickname">작성자 </label>
+                        <input type="text" id="nickname" name="nickname" th:value="${dto.nickname}" readonly/><br/>
 
-                        <label for="email">글쓴이 이메일 </label>
-                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly />
+<!--                        <label for="email">글쓴이 이메일 </label>-->
+<!--                        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly />-->
                     </div>
 
                     <div class="form-group">
@@ -245,7 +245,7 @@
                 <div class="idbox">
                     <div>
                         <img th:src="${dto.profile}" style="width:30px;height:30px;border-radius:50%;" />
-                        <div id = board_id th:text="${dto.nickname}">id</div>|
+                        <div id = board_id th:text="${board.nickname}">id</div>|
                         <div class="date" th:text="${board.date}">date</div>
                     </div>
                     <div class="hits-box">조회
