--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -190,7 +190,7 @@
         <div class="idbox">
           <div>
             <img th:src="${dto.profile}" style="width:30px;height:30px;border-radius:50%;" />
-            <div id = board_id th:text="${board.email}">id</div>|
+            <div id = board_id th:text="${board.nickname}">id</div>|
             <div class="date" th:text="${board.date}">date</div>
           </div>
           <div class="hits-box">조회
