--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -229,13 +229,10 @@
                 <img th:src="${dto.profile}" style="width:70px;height:70px;border-radius:50%;" />
             </div>
 
-            <form id="profileUploadForm" action="/uploadProfile" method="post" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label for="formFileSm" class="form-label">프로필 사진 변경</label>
-                    <input class="form-control form-control-sm" id="formFileSm" type="file" name="profileImage" accept="image/*">
-                </div>
-                <input class="img-ok" type="submit" value="변경하기">
-            </form>
+            <div class="mb-3">
+                <label for="imagechange" class="form-label">프로필 사진 변경</label>
+                <input class="form-control form-control-sm" id="imagechange" type="file" name="profileImage" accept="image/*">
+            </div>
 
         </div>
 
@@ -361,6 +358,60 @@ let isNicknameChecked = false;
             }).open();
 
     });
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js" integrity="sha512-emSwuKiMyYedRwflbZB2ghzX8Cw8fmNVgZ6yQNNXXagFzFOaQmbvQ1vmDkddHjm5AITcBIZfC7k4ShQSjgPAmQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+    const fileInput = document.getElementById('imagechange');
+              fileInput.addEventListener('change', function () {
+                 const formData = new FormData();
+                 const fileInput = document.getElementById('imagechange');
+                 const file = fileInput.files[0];
+                 formData.append('file', file, file.name);
+
+                     axios.post("/user/profileimage/upload",formData,{headers: { 'Content-Type': 'multipart/form-data'} })
+                     .then(response=>{
+                         console.log(response);
+                         location.reload();
+                     })
+            });
+
+</script>
+
+<script>
+// 프로필 업데이트 함수
+
+function updateProfile() {
+    const nickname = document.getElementById('nickname').value;
+    const newPhone = document.getElementById('phoneInput').value;
+    const newZipcode = document.getElementById('zipcode').value;
+    const newAddr1 = document.getElementById('addr1').value;
+    const newAddr2 = document.getElementById('addr2').value;
+
+    const requestBody = {
+        nickname: nickname,
+        phone: newPhone,
+        zipcode: newZipcode,
+        addr1: newAddr1,
+        addr2: newAddr2
+    };
+
+    // 서버에 비동기 요청을 보냅니다.
+    axios.post('/profile/update', requestBody)
+        .then(response => {
+            console.log('프로필이 성공적으로 업데이트되었습니다.', response);
+            // 여기에서 추가적인 동작을 수행할 수 있습니다.
+        })
+        .catch(error => {
+            alert('프로필 업데이트 중 오류가 발생했습니다: ' + error.message);
+            console.error('프로필 업데이트 중 오류 발생:', error);
+        });
+}
+
+// 프로필 업데이트 버튼 클릭 이벤트에 updateProfile 함수를 연결합니다.
+const updateButton = document.getElementById('updateButton');
+updateButton.addEventListener('click', updateProfile);
+
 </script>
 
 </body>
